# snowy-owl

./: Cargo.toml  Dockerfile  README.md
admin-backend/: Cargo.toml
admin-backend/src/: middleware.rs  models.rs  routes.rs
admin-backend/src/routes/: principals.rs  rooms.rs  subjects.rs
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: middleware.rs  models.rs  routes.rs
backend/src/routes/: auth.rs  marks.rs  students.rs  teachers.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx  config.ts  main.tsx
frontend/src/api/: authApi.ts  classesApi.ts  marksApi.ts  roomsApi.ts  studentsApi.ts  subjectsApi.ts  teachersApi.ts
frontend/src/components/AuthComponent/: AuthComponent.tsx
frontend/src/components/ClassesComponent/: ClassesComponent.tsx
frontend/src/components/Footer/: Footer.scss  Footer.tsx
frontend/src/components/Header/: Header.scss  Header.tsx
frontend/src/components/HeaderLink/: HeaderLink.scss  HeaderLink.tsx
frontend/src/components/MarksComponent/: MarksComponent.tsx
frontend/src/components/MarksTableComponent/: MarksTableComponent.tsx
frontend/src/components/ProfileComponent/: ProfileComponent.tsx
frontend/src/components/RoomsComponent/: RoomsComponent.tsx
frontend/src/pages/AuthPage/: AuthPage.tsx
frontend/src/store/: store.ts
frontend/src/utils/: getRoutes.ts  utils.ts
migrations/: 20240413085926_initial.sql
src/: error.rs  main.rs  models.rs
src/routes/: auth.rs  classes.rs  marks.rs  principals.rs  students.rs  teachers.rs
(+15 files in other folders)
