[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie", "query"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "time"] }
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
# totp-rs = { version = "5.5.1", features = ["otpauth"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
# fred = { git = "https://github.com/aembke/fred.rs", branch = "feat/9.0.0" }
